css/styles.css
body {
	font-family: sans-serif;
	background: #1A1A1A;
	color: #E4E4E4;
	margin: 0;
	padding: 0;
	cursor: default;
	font-size: 16px;
}

header {
	background: #6610f2;
	color: #E4E4E4;
	padding: 0;
	height: 44px;
}

nav {
	float: right;
	padding: 0px 8px;
}

a.header-btn,
a.header-btn:visited {
	display: inline-block;
	vertical-align: middle;
	font-family: 'Material Icons';
	text-decoration: none;
	font-size: 23px;
	line-height: 28px;
	cursor: pointer;
	color: #E4E4E4;
	padding: 8px;
}

a.header-btn:focus,
a.header-btn:hover {
	color: #F2911A;
}

a.header-btn.back-btn {
	float: left !important;
	padding-left: 16px !important;
}

.header-switch {
	display: inline-block;
	vertical-align: middle;
	padding: 8px;
}

h1 {
	margin: 8px 16px 8px 16px;
	font-size: 21px;
	line-height: 28px;
	font-weight: normal;
	display: inline-block;
	width: 75%;
	width: calc(100% - 400px);
	width: -webkit-calc(100% - 400px);
	width: -moz-calc(100% - 400px);
	min-width: 200px;
	max-width: 80%;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

main {
	padding: 8px 16px 32px 16px;
}

main.center {
	text-align: center;
}

h3 {
	margin: 12px 0px 4px 0px;
}

.notice {
	display: block;
	background: #E52A2D;
	border: solid 1px rgba(0, 0, 0, 0.5);
	border-radius: 5px;
	padding: 8px;
	max-width: 1036px;
	margin: 16px auto;
	text-align: center;
}

button,
input[type="button"] {
	margin-top: 4px;
	padding: 4px 8px;
	font-size: 14px;
	cursor: pointer;
	background: #F2911A;
	border: none;
	border-radius: 3px;
	cursor: pointer;
}

button:hover,
button:focus,
input[type="button"]:hover,
input[type="button"]:focus {
	background: #FFA02C;
}

button:active,
input[type="button"]:active {
	background: #F8A034;
}

a,
a:visited {
	color: #F2911A;
	cursor: pointer;
}

a:hover,
a:focus {
	color: #FFA02C;
}

u {
	cursor: help;
	text-decoration-line: underline;
	text-decoration-style: dashed;
}

/* programme page */
#media-list,
#selected-media {
	list-style-type: none;
	margin: 0px;
	padding: 4px;
	border: solid 1px #7A7A7A;
}

#media-list {
	min-height: 80px;
	max-height: 270px;
	overflow-x: hidden;
	overflow-y: auto;
}

#selected-media {
	height: 80px;
	overflow-x: auto;
	overflow-y: hidden;
	white-space: nowrap;
}

.media-item {
	display: inline-block;
	position: relative;
	width: 128px;
	height: 72px;
	text-align: center;
	padding: 4px;
}

.media-item.dragging {
	transition: 0.01s;
	width: 0px;
	padding: 4px 0px;
	transform: translateX(-9999px);
	visibility: hidden;
}

.media-item img {
	display: inline-block;
	width: inherit;
	height: inherit;
	background: #000000;
	object-fit: scale-down;
	cursor: grab;
}

.media-item button {
	display: none;
	position: absolute;
	top: 4px;
	right: 6px;
	margin: 0px;
	padding: 4px;
	background: transparent;
	border: none;
	cursor: pointer;
	color: #FFFFFF;
	text-shadow: 0 0 3px #000000;
	font-size: 10px;
	font-weight: bold;
}

.media-item button:hover {
	color: #E52A2D;
	text-shadow: 0 0 1px #FFFFFF;
}

.media-item:hover button {
	display: block;
}

.media-item input.duration {
	display: block;
	position: absolute;
	bottom: 4px;
	left: 4px;
	right: 4px;
	width: 128px;
	padding: 6px;
	box-sizing: border-box;

	-moz-appearance: textfield;
	background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.3), rgba(0,0,0,0.4));
	border: none;
	color: #FFFFFF;
	text-align: center;
	text-shadow: 0 0 3px #000000;
	font-size: 10px;
	font-weight: bold;
	cursor: text;
	transition: 0.2s;
}

.media-item input.duration:hover,
.media-item input.duration:focus {
	outline: none;
	background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.6), rgba(0,0,0,0.8));
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

#drop-location {
	display: inline-block;
	width: 8px;
	height: 72px;
	background-color: #3AA2DB;
	margin-top: 4px;
	margin-right: 2px;
	margin-left: 2px;
}

#loading {
	display: block;
	position: fixed;
	top: 0px;
	left: 0px;
	right: 0px;
	bottom: 0px;
	z-index: 99999;
	background: rgba(0,0,0,0.85);
	backdrop-filter: blur(4px);
	color: #FFFFFF;
	text-align: center;
	padding-top: 48px;
}

#loading::before {
	display: block;
	content: '';
	width: 48px;
	height: 48px;
	margin: 28px auto;
	border-radius: 50%;
	border-top: solid 6px #EA5C28;
	border-right: solid 6px #EA5C28;
	border-bottom: solid 6px transparent;
	border-left: solid 6px transparent;
	animation: spin 0.8s linear infinite;
}

@keyframes spin {
	0% { transform: rotate(0deg); }
	100% { transform: rotate(360deg); }
}

/* calendar page */
.glm-calendar {
	display: inline-block;
	padding: 8px;
}

.glm-calendar .month {
	border: solid #7A7A7A 1px;
}

.glm-calendar caption {
	padding: 4px;
	text-align: center;
	border: solid #7A7A7A 1px;
}

.glm-calendar .month .daynames td {
	border-bottom: solid #7A7A7A 1px;
}

.glm-calendar .month td {
	padding: 4px;
	width: 36px;
	text-align: center;
	border: solid 1px transparent;
}

.glm-calendar .month .week .day {
	cursor: pointer;
}

.glm-calendar .month .week .day.custom {
	background: #5CAEdA !important;
}

.glm-calendar .month .week .day.default-disabled {
	background: #E52A2D !important;
}

.glm-calendar .month .week .day.custom.default-disabled {
	background: #3AA2DB !important;
}

.glm-calendar .month .week .day:hover {
	background: #F2911A;
	border-color: rgba(0,0,0,0.5);
}

.prog-tooltip {
	display: block;
	position: fixed;
	background: #F2911A;
	padding: 4px;
	height: 71px;
	box-shadow: 0 0 4px #000000;
	border: solid 1px #9c5906;
	pointer-events: none;
	white-space: nowrap;
}

.prog-tooltip::before {
	content: '';
	position: absolute;
	display: block;
	width: 0px;
	border: 7px solid transparent;
	border-bottom: 0;
}

.prog-tooltip.arr-bottom::before {
	border-top: 7px solid #9c5906;
	bottom: -7px;
}

.prog-tooltip.arr-right::before {
	left: 30px;
}

.prog-tooltip.arr-top::before {
	border-bottom: 7px solid #9c5906;
	top: -14px;
}

.prog-tooltip.arr-left::before {
	right: 26px;
}

.prog-tooltip small {
	display: block;
	font-family: sans-serif;
	font-size: 12px;
	line-height: 15px;
	height: 15px;
	margin-bottom: 2px;
}

.prog-tooltip img {
	display: inline-block;
	width: 96px;
	height: 54px;
	background: #000000;
	object-fit: contain;
	margin-right: 4px;
}

.prog-tooltip img:last-child {
	margin-right: 0px;
}

/* fullscreen file uploader */
form.fullscreen-file {
	display: block;
	position: fixed;
	z-index: 200;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	width: 100%;
	height: 100%;
	background: inherit;
}

form.fullscreen-file.dragover {
	background: #343A40;
}

form.fullscreen-file input[type="file"] {
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	width: 100%;
	height: 100%;
	cursor: pointer;
}

form.fullscreen-file label {
	display: flex;
	position: relative;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	pointer-events: none;
	height: 100%;
	background: inherit;
	z-index: 3;
}

form.fullscreen-file label small {
	margin-top: 16px;
}

form.fullscreen-file label small.extra {
	color: #7A7A7A;
	font-size: x-small;
}

form.fullscreen-file label::after {
	content: '';
	position: absolute;
	border: dashed 3px #7A7A7A;
	border-radius: 16px;
	top: 16px;
	left: 16px;
	bottom: 16px;
	right: 16px;
}

.ugly-back-btn {
	display: block;
	text-decoration: none;
	padding: 6px;
	margin-bottom: 8px;
}

.ugly-back-btn .material-icons {
	margin-right: 4px;
}

.ugly-back-btn span {
	vertical-align: middle;
}

input.fancy {
	display: inline-block;
	vertical-align: middle;
	-webkit-appearance: textfield;
	-moz-appearance: textfield;
	appearance: textfield;
	background: #3A3A3A;
	color: #E4E4E4;
	border: solid 1px #5E5959;
	border-radius: 3px;
	padding: 4px 0px 4px 6px;
	box-sizing: border-box;
	width: 200px;
	height: 27px;
}

input.fancy:hover {
	background: #343A40;
	outline: none;
}

input.fancy:focus {
	border-color: #F2911A;
	background: #343A40;
	outline: none;
}

label.fancy-label {
	font-size: small;
}

.fancy-btn {
	display: inline-block !important;
	vertical-align: middle;
	box-sizing: border-box;
	height: 27px;
	margin-top: 0px !important;
}

.big-btn {
	display: block;
	margin-top: 16px;
	box-sizing: border-box;
	width: 200px;
	padding: 6px 16px;
}

.switch {
	position: relative;
	display: inline-block;
	vertical-align: middle;
	width: 40px;
	height: 24px;
}

.switch input {
	opacity: 0;
	width: 0;
	height: 0;
}

.slider {
	position: absolute;
	cursor: pointer;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: rgba(0,0,0,0.1);
	border-radius: 12px;
	transition: 0.2s;
}

.slider:before {
	content: "";
	position: absolute;
	height: 19px;
	width: 19px;
	left: 3px;
	bottom: 3px;
	background-color: white;
	border-radius: 8.5px;
	transition: inherit;
}

input:checked + .slider {
	background-color: #F2911A;
}

input:focus + .slider {
	box-shadow: 0 0 1px #F2911A;
}

input:checked + .slider:before {
	transform: translateX(14px);
}

.switch-label {
	display: inline-block;
	margin-left: 4px;
	height: 24px;
	line-height: 24px;
	vertical-align: middle;
	font-size: smaller;
}

